--- a/src/emailTemplates/verification.html
+++ b/src/emailTemplates/verification.html
@@ -6,5 +6,5 @@
         Email Address</a></p>
 
 <p style="margin-bottom:0px;">
-    Thanks! <br /> Snietyn CodeNameVero Team
+    Thanks! <br /> Demo app
 </p>
