--- a/src/emailTemplates/layout.html
+++ b/src/emailTemplates/layout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="format-detection" content="telephone=no">
-    <title>{{title}} | CodeNameVero</title>
+    <title>{{title}} | Demo app</title>
 
     <style type="text/css">
         body {
@@ -181,7 +181,7 @@
                 <table border="0" width="600" cellpadding="0" cellspacing="0" class="container">
                     <tr>
                         <td class="container-padding footer-text" align="left" style="font-family:Helvetica, Arial, sans-serif;font-size:13px;line-height:19px;color:#aaaaaa;padding-top:20px;text-align:center;">
-                            This email was sent by CodeNameVero Team of bidlocoders.
+                            This email was sent by Demo app.
                         </td>
                     </tr>
                 </table>
